# syncedlyrics

./: README.md  pyproject.toml  tests.py
.github/workflows/: tests.yml
syncedlyrics/: __init__.py  cli.py
syncedlyrics/providers/: megalobiz.py  musixmatch.py  netease.py
syncedlyrics_aio/: __init__.py  __main__.py  cli.py  utils.py
syncedlyrics_aio/providers/: __init__.py  base.py  genius.py  lrclib.py  megalobiz.py  musixmatch.py  netease.py  tencent.py
