[tool.poetry]
name = "syncedlyrics_aio"
version = "1.0.2"
description = "Get an LRC format (synchronized) lyrics for your music with aiohttp support"
repository = "https://github.com/rtcq/syncedlyrics"
urls = { "Bug Tracker" = "https://github.com/rtcq/syncedlyrics/issues" }
authors = ["Momo <lo3me@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.poetry.dependencies]
python = ">=3.8"
beautifulsoup4 = "^4.12.3"
rapidfuzz = "^3.6.2"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
black = "*"

[tool.poetry.scripts]
syncedlyrics_aio  = "syncedlyrics_aio.cli:cli_handler"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.4.2"
pytest-asyncio = "^0.23.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
